tests/typescript/neg/operators/stmt-01.ts

/*@ foo :: (number, number) => number */
function foo(x, y){
  x = x + 1;
  y = y + 1;
  assert(x == y);
  return x + z;
}
